# photosift

./: .gitignore  LICENSE  README.md  build.bat  dev.bat  index.html  package-lock.json  package.json  update_icons.bat  vite.config.ts
docs/feature/: core_sorting.md  file_filtering.md  organization.md
docs/web/: public_features.md
python-engine/: build.py  main.py  photosift-engine.spec  requirements.txt
python-engine/engine/: __init__.py  duplicate_detector.py  exif_reader.py  face_detector.py  face_matcher.py  face_processor.py  file_classifier.py  models.py  sorter.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  sidecar.rs
src/components/: Header.tsx  HelpTooltip.tsx  InfoModal.tsx  LeftPanel.tsx  RightPanel.tsx  StatusBar.tsx
src/lib/: i18n.ts  ipc.ts
src/stores/: appStore.ts
